# HTX-Client-Server-Crate

./: .gitignore  Cargo.toml  LICENSE.md  README.md
Python/: .gitignore  client.py  pyproject.toml  server.py  tls.py
Python/src/: __init__.py  client.py  noiseXK.py  server.py  tls.py
Rust/: Cargo.toml
Rust/src/: client.rs  tls.rs
src/: main.rs  server.rs
