[package]
name = "HTX-Client-Server-Crate"
version = "0.1.0"
authors = ["Kaden Daya <kaden.daya@icloud.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
license-file = "LICENSE.md"

[dependencies]
rustls = "0.22"
rustls-pemfile = "2.0"
webpki-roots = "0.26"

[features]
standalone = []

[[bin]]
name = "client-test-tls"
path = "src/client.rs"

[[bin]]
name = "server-test-tls"
path = "src/server.rs"